new version with purple design and fixed formatting

--- a/Org/CV (ORG).org
+++ b/Org/CV (ORG).org
@@ -6,7 +6,7 @@
   - [[https://shamansir.github.io][Website]]: https://shamansir.github.io
   - Birthday: 4 March 1984
 
-soc
+[[https://github.com/shamansir][GitHub]] -- [[https://stackoverflow.com/users/167262/shaman-sir][StackOverflow]] -- [[https://x.com/shaman_sir][Twitter (X)]] -- [[https://instagram.com/shamansir][Instagram]] -- [[https://soundcloud.com/shamansir][SoundCloud]] -- [[https://vimeo.com/shamansir][Vimeo]] -- [[https://youtube.com/@UlricWilfred][YouTube]] -- [[https://shamansir.bandcamp.com/shamansir][Bandcamp (Artist)]] -- [[https://bandcamp.com/shamansir][Bandcamp (Fan)]] -- [[https://last.fm/shamansir][Last.fm]] -- [[https://livejournal.com/tungusso][LiveJournal]] -- [[https://open.spotify.com/artist/3p5XmmBfQLQkEScwpVdEwU][Spotify (Artist)]] -- [[https://open.spotify.com/user/11125039766][Spotify (Listener)]] -- [[https://www.goodreads.com/user/show/29823581-anton-kotenko][GoodReads]] -- [[https://stepik.org/users/43031759/certificates][Stepik]] -- [[https://codewars.com/users/shamansir][CodeWars]] -- [[https://exercism.org/profiles/shamansir][Exercism]] -- [[https://lanyrd.com/shaman_sir][Lanyrd]] -- [[https://telegram.com/shaman_sir][Telegram]] -- [[https://backloggery.com/shamansir][Backloggery]] -- [[https://infinitebacklog.com/users/shamansir][InfiniteBacklog]] -- [[https://steamcommunity.com/id/shamansir/][Steam]] -- [[https://discord.com/shaman.sir][Discord]] -- [[https://duolingo.com/profile/shamansir][Duolingo]] -- [[https://www.linkedin.com/in/shamansir/][LinkedIn]]
 
 Starting from 2003, I work as a FrontEnd & Software Developer, but that's since even earlier I discovered that developing user interfaces or quite anything visual and interactive, is my passion.
 I often preferred programming to gaming or watching TV or going outside (not to the extent, though, or else how would I find friends?).
@@ -27,6 +27,10 @@ From all this it could look like I loved mathematics all the way, but at the sta
 
 May 2016 — August 2024
 
+  - [[https://jetbrains.com][jetbrains.com]]
+  - [[https://cai.jetbrains.com][Computational Arts Initiative @ JetBrains]]
+  - [[https://www.jetbrains.com/lp/devecosystem-2023/][Developers Survey @ JetBrains]]
+
 In JetBrains, I mostly worked in Computational Arts Initiative, which is the team we formed by accident with the designer Serg Golovachev, with whom we've met while working in Animatron.
 
 The purpose of the team is helping designers get rid of the repetitive tasks where marketing requires tons of variations of the same approaches. The technologies differed vastly between projects and years, always it was something with the Web Frontend though.
@@ -39,10 +43,16 @@ Aside from that, I was doing FrontEnd development for jetbrains.com website, som
   - /Munich/, /Germany/ 
 
 - Technologies: :: JavaScript, React, Elm, HTML5 Canvas, GLSL Shaders, d3.js, Kotlin JS, Kotlin, DHall, PureScript
+- Tags: :: #generative-art, #react, #redux, #elm, #dhall, #kotlin-js, #user-interfaces
+
 *** Animatron LLC
 *GWT/JS Developer*
 
 July 2011 — May 2016
+
+  - [[https://animatron.com][Animatron Web Editor]]
+  - [[https://github.com/Animatron/player][Animatron JS Player @ GitHub]]
+  - [[https://animatron.github.io/player/][Animatron JS Player Docs & Sandbox]]
 
 At Animatron, I mostly developed the Web Player based on HTML5 Canvas technology, in pure vanilla JavaScript. Designing a friendly API was one of my tasks, bit not as important as integrating the player into the main GWT-Based Application so that it would reproduce properly and perfectly every feature that the Animation Editor had. That required some GWT coding too. Still, the player also could be used standalone and be embedded into websites, and has a sandbox with the code editor to provide user with an easy way to develop scenes.
 
@@ -51,16 +61,22 @@ At Animatron, I mostly developed the Web Player based on HTML5 Canvas technology
   - /Boston/, /United States, MA/ 
 
 - Technologies: :: Java, Google Web Toolkit (GWT), JavaScript, HTML5 Canvas
+- Tags: :: #canvas, #javascript, #animation, #gwt, #svg, #graphics
+
 *** iPark Ventures
 *GWT Developer*
 
 April 2010 — June 2011
+
+  - [[https://experika.com][Experika]]
 
 Programming and Architecture with GWT ﴾with mvp4g﴿, writing custom components. We developed two web portals: one for job-searchers and HRs, and another one is for pet-owners searching for the medical care or shelter or just to discuss general topics regarding their domestic animals. I am fortunate that the Team-Leads and folks from the company convinced my to give my first public talk on my knowledge which further really helped me in finding next places to work and led to Animatron & JetBrains in the end.
 
   - /Odessa/, /Ukraine/ 
 
 - Technologies: :: Java, Google Web Toolkit (GWT), mvp4g GWT Framework, JavaScript, Python
+- Tags: :: #java, #gwt, #mvp4j, #javascript, #python
+
 *** Exectum LLC
 *Java EE / Web Developer*
 
@@ -71,21 +87,15 @@ The ExtJS-based FrontEnd for the Administration of a Billing Engine, which commu
   - /St. Petersburg/, /Russia/ 
 
 - Technologies: :: Java, Java RPC, Spring, JavaScript, ExtJS
-*** Sea Project
-*XSLT Developer*
+- Tags: :: #java, #spring, #java-rpc, #ext-js
 
-August 2009 — September 2009
-
-Project, related to the sea machinery documentation. Just one month, so almost nothing!
-
-  - /St. Petersburg/, /Russia/ 
-
-- Technologies: :: Java, Java EE, XML, XSLT, JavaScript
 *** FotoNation / Piclinq
 *Java EE Developer*
 *JavaScript Web UI Developer*
 
 June 2007 — June 2009
+
+  - [[https://mypicturetown.com][myPictureTown]]
 
 In FotoNation, we developed photo sharing service for Nikon, one of the very first of its kind. At that time, Nikon had released their first Photo Cameras with Wi-Fi support. I worked in the UI Team, responsible both for Java & JavaScript on the FrontEnd, the hardest were the Gallery page and the individual Photo viewer, like including Drag & Drop of images from the file system while there were almost no solutions for it at the time, beating Time Zones and other challenges.
 
@@ -94,6 +104,20 @@ Action System for the UI was the idea and implementation of ours since technolog
   - /St. Petersburg/, /Russia/ 
 
 - Technologies: :: Java, Apache Wicket, Java Server Pages, JavaScript
+- Tags: :: #java, #apache-wicket, #javascript, #ajax, #jsp
+- 
+Recommendations: :: #+BEGIN_QUOTE
+Anton is a very talented developer who developed a lot
+of Ajax-based Web UI as well as server-side Java code
+for myPictureTown service. His knowledge of web technologies and languages, such
+as Javascript+Ajax, HTML, CSS are on the expert
+level. He is a reliable, hard-working professional, and
+I recommend him without reservations. -- Boris Berkman
+#+END_QUOTE
+#+BEGIN_QUOTE
+I know Anton as a brilliant Javascript programmer with strong understanding of the most advanced concepts of this language. His Java skills are also allow him to write good Java code. It is a pleasure to work with such talented professional. -- Sergey Kusnetsov
+#+END_QUOTE
+
 *** FK LTD
 *Web Developer*
 
@@ -104,10 +128,15 @@ CMS Project Development in PHP-JS-CSS for Real Estate Industry; Several small AJ
   - /St. Petersburg/, /Russia/ 
 
 - Technologies: :: PHP, JavaScript, AJAX, XML
+- Tags: :: #ajax, #javascript, #php
+
 *** EmDev LLC
 *Software / Web Developer*
 
 March 2005 — October 2006
+
+  - [[https://unlockaustin.com][UnlockAustin]]
+  - [[https://emforge.org][EmForge]]
 
 Mostly driven by outsourcing, in this company I participated in J2EE Projects ﴾Spring, Hibernate﴿ from the scratch, writing components, usually trying out and using new technologies
 ﴾Ajax, JSF, Spring/Hibernate﴿, what used to do before, and keep doing till today. One of the main projects was UnlockAustin, which was a platform for introducing people the musical and theatrical events (but not only those) happening in Austin, Texas.
@@ -118,6 +147,8 @@ Dealing with threads concurrency and a high rate of updates;
   - /St. Petersburg/, /Russia/ 
 
 - Technologies: :: Java, Java EE, Enterprise Java Beans, Java Server Pages, Java Server Faces, Spring, Hibernate, Borland Delphi, Python
+- Tags: :: #java, #java-ee, #jsp, #ejb, #jsf, #delphi, #python
+
 *** FSBI "VNII Okeangeologia"
 *Software Developer*
 *Animation Creator for Conferences*
@@ -125,6 +156,9 @@ Dealing with threads concurrency and a high rate of updates;
 *Interpreter*
 
 March 2003 — March 2005
+
+  - [[https://vniio.ru/about/science_dept/][VNIIO : Science Department]]
+  - [[https://www.вниио.рф][The University Website]]
 
 By chance, I got to work at the GeoPhysics University at my age of 19, thanks to the friend. Among the work at the site, we did several travels with camping and monitoring seismic waves in real-time.
 The purpose was to predict earthquakes so that people would be aware in advance or would know if it is safe to build bridges at place.
@@ -137,10 +171,13 @@ Also, it happend that someone noticed I know how to use Macromedia Flash and our
   - /Privetnoye/, /Ukraine/ 
 
 - Technologies: :: Borland Delphi, Object Pascal, C++, Assembler, Macromedia Flash
+- Tags: :: #animation, #delphi, #macromedia-flash, #asm, #cpp
 
 ** Talks
 
 *** The Basics of Generating Everything
+
+
 in 2023
 
 @ [[https://www.meetup.com/munich-lambda/events/296915834/][Lambda Meetup @ JetBrains ('tail 23)]]. Munich, Germany
@@ -149,8 +186,9 @@ How we can use waves a base for generating both audio or static graphics or vide
 
   - [[https://youtu.be/e9urkjHSgXY][Video]]  (EN)
 
-
 *** PureScript with a chance of Free Monads
+
+
 in 2023
 
 @ [[https://www.meetup.com/munich-lambda/events/289723656/?eventOrigin=group_past_events][Lambda Meetup @ JetBrains ('head 23)]]. Munich, Germany
@@ -159,8 +197,9 @@ This talk describes the use of Free Monad concept in the core of Noodle project 
 
   - [[https://www.youtube.com/watch?v=oSZMB9f6v4c][Video]]  (EN)
 
-
 *** Noodle : Animation as Ramen
+
+
 in 2022
 
 @ JetBrains Design Talks '22. Munich, Germany
@@ -169,8 +208,9 @@ This talk was recorded during Covid and is about my project Noodle, for visual p
 
   - [[https://www.youtube.com/watch?v=FSzMBKYgvCE&list=PLQ176FUIyIUZ3DvECf0NkkOpYwE0JECFn&index=9][Video]]  (EN)
 
-
 *** Tron : Minimalist UI for Generative Art
+
+
 in 2020
 
 @ [[https://www.jetbrains.com/lp/designconf/][JetBrains Design Conference '20]]. Munich, Germany
@@ -179,8 +219,9 @@ Tron, the grid-based UI we use for generators, developed by me and designed by E
 
   - [[https://www.youtube.com/watch?v=5mOT5q8SKDM][Video]]  (EN)
 
-
 *** Generative Animation in Elm
+
+
 w/Sergey Golovatschov
 
 in 2019
@@ -193,8 +234,9 @@ How we developed one of our splash screen generators for JetBrains in Elm langua
 
   - [[https://www.youtube.com/watch?v=he1t3uXvl7o][Video]]  (EN)
 
-
 *** The Future of Web UI Development.
+
+
 September 2018
 
 @ [[https://www.meetup.com/de-DE/munich-frontend-developers/events/253679780/][FrontEnd Developers Meetup]]. Munich, Germany
@@ -203,8 +245,9 @@ Nothing less, nothing more, how I think we are going in the direction of using p
 
   - [[https://speakerdeck.com/shamansir/the-future-of-web-ui-development][Slides]]  (EN)
 
-
 *** iElm @ JetBrains
+
+
 January 2017
 
 Munich, Germany
@@ -217,8 +260,9 @@ The technology behind the notebook REPL iElm (see the previous talk), mostly reg
 
   - [[https://vimeo.com/242822314][iElm in action]]  (EN)
 
-
 *** iElm
+
+
 December 2017
 
 Munich, Germany
@@ -229,8 +273,9 @@ iElm is a web notebook-like REPL I developed for the Elm language so that it wou
 
   - [[https://vimeo.com/242822314][iElm in action]]  (EN)
 
-
 *** Elm. The language itself and how it brings functional programming into web
+
+
 September 2017
 
 @ [[https://www.meetup.com/de-DE/munich-frontend-developers/events/241139489/][Frontend Developers Meetup]]. Munich, Germany
@@ -240,7 +285,6 @@ The syntax of Elm language, its benefits and downfalls. Not the talk I am proud 
   - [[https://speakerdeck.com/shamansir/elm-revolution][Slides]]  (EN)
 
   - [[https://www.youtube.com/watch?v=-3OL8V7Lk-Y][Video]]  (EN)
-
 
 *** About Git. That's easy
 (Про Гит. Вот так просто)
@@ -255,8 +299,9 @@ The details of how the Git command line interface works with the interactive exa
 
   - [[https://speakerdeck.com/shamansir/pro-git][Slides (ru)]]  (RU)
 
-
 *** Elm: 2D & 3D Graphics.
+
+
 June 2017
 
 @ [[https://www.meetup.com/munich-frontend-developers/][Frontend Developers Meetup]]. Munich, Germany
@@ -267,8 +312,9 @@ How the new, and easy-to-learn, functional language for web, named Elm, brings t
 
   - [[https://vimeo.com/manage/videos/222331979][Video]]  (EN)
 
-
 *** RPD: Reactive Patch Development v2.0
+
+
 February 2017
 
 @ [[https://www.meetup.com/munichjs-user-group/events/237146815/][JavaScript Meetup]]. Munich, Germany
@@ -279,8 +325,9 @@ The slightly extended version of the talk about my visual programming project RP
 
   - [[https://speakerdeck.com/shamansir/rpd-reactive-patch-development-extended-cut][Slides @ Google Meetup 2017]]  (EN)
 
-
 *** RPD: Reactive Patch Development
+
+
 in 2016
 
 @ [[https://kaiser.gallery/events/js-kongress-2016/][JS Kongress]]. Munich, Germany
@@ -291,11 +338,12 @@ in 2016
 
   - [[https://www.youtube.com/watch?v=K6KDDGlTGqc][Video @ JS Kongress 2016]]  (EN)
 
-
 *** Animatron Player API in Details
+
+
 November 2013
 
-@ Ultracode Munich Meetup #4. Munich, Germany
+@ Ultracode Munich Meetup _#4. Munich, Germany
 
 Wayra GmbH
 
@@ -304,7 +352,6 @@ The details of how API of the Animatron JS Player is desined, with history, exam
   - [[https://speakerdeck.com/shamansir/animatron-player-api-in-details-v3][Slides, v.3]]  (EN)
 
   - [[https://vimeo.com/manage/videos/79683081][Video]]  (EN)
-
 
 *** How to Grasp the Functional Way of Writing JavaScript
 (Постигаем функциональный JavaScript)
@@ -317,7 +364,6 @@ Discover functional approach in JavaScript as opposed to trying to apply Object-
 
   - [[https://speakerdeck.com/shamansir/postighaiem-funktsional-nyi-javascript][Slides (ru)]]  (RU)
   - [[https://speakerdeck.com/shamansir/mastering-functional-javascript][Slides (en)]]  (EN)
-
 
 *** The Real JavaScript
 (Настоящий JavaScript)
@@ -332,8 +378,9 @@ Putting a stop in the discussion of prototype inheritance in JavaScript with the
 
   - [[https://vimeo.com/33393795][Video]]  (RU)
 
-
 *** Fluxus
+
+
 April 2011
 
 @ [[https://addconf.ru/en/program/12587][Application Developer Days (ADD)]]. St. Peterburg, Russia
@@ -341,7 +388,6 @@ April 2011
 Fluxus is the visual tool for developing interactive three-dimensional visuals, for example to react on music. It uses Scheme / Racket stack over OpenGL backend. This talk shares my inspiration with it and demonstrates features of the engine. However, my Jack (not a person, but audio Linux driver) failed at the time of talk, so there was no audio to rely on.
 
   - [[https://vimeo.com/23468113][Video]]  (RU)
-
 
 *** Web-development with GWT & mvp4g
 (Веб-разработка на GWT и mvp4g)
@@ -360,7 +406,7 @@ The huge (but as fun as possible) talk in three parts on how you could architect
 
 ** Projects
 
-*Noodle*
+  - *Noodle*
 
 Visual Programming for producing Generative Art and more, with CLI & Web & VR (planned) frot-ends, written in PureScript
 
@@ -370,10 +416,10 @@ Visual Programming for producing Generative Art and more, with CLI & Web & VR (p
 
 ([[https://github.com/shamansir/noodle][GH:noodle]], [[https://noodle.labs.jb.gg/][Last working Noodle Demo]])
 
-#purescript, #visual-programming, #functional-programming, #generative-art
+/Tags:/ #purescript, #visual-programming, #functional-programming, #generative-art
 
 
-*RPD*
+  - *RPD*
 
 Visual Programming for Generative Art, in JavaScript, driven by Reactive Streams Programming
 
@@ -383,10 +429,10 @@ Visual Programming for Generative Art, in JavaScript, driven by Reactive Streams
 
 ([[https://github.com/shamansir/rpd][GH:rpd]], [[https://shamansir.github.io/rpd][RPD Docs & Demos]])
 
-#javascript, #svg, #visual-programming, #generative-art, #reactive-programming, #kefir.js, #computational-arts
+/Tags:/ #javascript, #svg, #visual-programming, #generative-art, #reactive-programming, #kefir.js, #computational-arts
 
 
-*Tron GUI*
+  - *Tron GUI*
 
 Innovative approach for generative art User Interfaces: now grid-based
 
@@ -396,10 +442,10 @@ Innovative approach for generative art User Interfaces: now grid-based
 
 ([[https://github.com/shamansir/tron-gui][GH:tron-gui]], [[https://tron.labs.jb.gg/][Tron Constructor @ CAI]], [[https://cai.jetbrains.com/][Computational Arts Initiative]], [[https://tiler.labs.jb.gg/][Tiler @ CAI usage example]], [[https://neobeam.labs.jb.gg/][Neobeam @ CAI usage example]], [[https://plasmatic.labs.jb.gg/][Plasmatic @ CAI usage example]])
 
-#elm, #gui, #user-interface, #functional-programming, #dhall, #javascript, #generative-art, #computational-arts, #graphs
+/Tags:/ #elm, #gui, #user-interface, #functional-programming, #dhall, #javascript, #generative-art, #computational-arts, #graphs
 
 
-*Kvant*
+  - *Kvant*
 
 Translating Wave Function Collapse algorithm to Elm, and UI for it
 
@@ -409,10 +455,10 @@ Translating Wave Function Collapse algorithm to Elm, and UI for it
 
 ([[https://github.com/shamansir/kvant][GH:kvant]], [[https://kvant.labs.jb.gg/][Kvant Demo @ CAI]], [[https://cai.jetbrains.com/][Computational Arts Initiative]])
 
-#elm, #gui, #generative-art, #functional-programming, #computational-arts
+/Tags:/ #elm, #gui, #generative-art, #functional-programming, #computational-arts
 
 
-*iElm*
+  - *iElm*
 
 Interactive Visual REPL for Elm language, showing types and SVG and even `elm-canvas` Graphics
 
@@ -422,10 +468,10 @@ Interactive Visual REPL for Elm language, showing types and SVG and even `elm-ca
 
 ([[https://github.com/shamansir/ielm][GH:ielm]])
 
-#elm, #repl, #functional-programming
+/Tags:/ #elm, #repl, #functional-programming
 
 
-*node-elm-repl*
+  - *node-elm-repl*
 
 CLI client for iElm to get the information about the type of the entered expression
 
@@ -435,10 +481,10 @@ CLI client for iElm to get the information about the type of the entered express
 
 ([[https://github.com/shamansir/node-elm-repl][GH:node-elm-repl]])
 
-#elm, #javasript, #binary, #repl, #functional-programming
+/Tags:/ #elm, #javasript, #binary, #repl, #functional-programming
 
 
-*purescript-blessed*
+  - *purescript-blessed*
 
 Port of JavaScript Blessed library, which is the powerful window management and component library for Command-Line-interfaces (CLI)
 
@@ -448,10 +494,10 @@ Port of JavaScript Blessed library, which is the powerful window management and 
 
 ([[https://github.com/shamansir/purescript-blessed][GH:purescript-blessed]])
 
-#cli, #functional-programming, #purescript, #user-interface, #components
+/Tags:/ #cli, #functional-programming, #purescript, #user-interface, #components
 
 
-*Purs-Typeclasses*
+  - *Purs-Typeclasses*
 
 The auto-generated interactive SVG poster / Web App of the PureScript TypeClasses' structure and methods and dependencies
 
@@ -459,25 +505,25 @@ The auto-generated interactive SVG poster / Web App of the PureScript TypeClasse
 
 /Started:/ around two-three years ago
 
-([[https://github.com/shamansir/purescript-typeclasses][GH:purescript-typeclasses]])
+([[https://github.com/shamansir/purescript-typeclasses][GH:purescript-typeclasses]], [[https://x.com/shaman_sir/status/962696001139232768][Twitter post with sources, v.1]], [[https://x.com/shaman_sir/status/1027968186979950592][Twitter post with sources, v.2]])
 
-#functional-programming, #purescript, #svg
+/Tags:/ #functional-programming, #purescript, #svg
 
 
-*WinniPeg*
+  - *WinniPeg*
 
-Try to implement parsing from PEG grammars in PureScript
+Visual aid and editor for implementing PEG grammars (purescript-grammar) in PureScript
 
 /Status:/ Just Started
 
 /Started:/ during last year
 
-([[https://github.com/shamansir/winni-peg][GH:winni-peg]])
+([[https://github.com/shamansir/winni-peg][GH:winni-peg]], [[https://github.com/shamansir/purescript-grammar][GH:purescript-grammar]])
 
-#functional-programming, #purescript, #org-mode, #peg, #grammars, #parsing
+/Tags:/ #functional-programming, #purescript, #org-mode, #peg, #grammars, #parsing, #datalog
 
 
-*&ndORG*
+  - *&ndORG*
 
 An attempt to develop a user-friendly web ORG-mode editor while conversing most of its `emacs` profits and build UI on visual-keystrokes-concept
 
@@ -487,10 +533,10 @@ An attempt to develop a user-friendly web ORG-mode editor while conversing most 
 
 ([[https://github.com/shamansir/ndorg][GH:ndorg]])
 
-#functional-programming, #purescript, #org-mode, #grammars, #parsing
+/Tags:/ #functional-programming, #purescript, #org-mode, #grammars, #parsing
 
 
-*GEN UI Lang*
+  - *GEN UI Lang*
 
 On storing UI components definitions for Generative Art in JSON or D-Hall format, for Tron GUI mostly
 
@@ -500,10 +546,10 @@ On storing UI components definitions for Generative Art in JSON or D-Hall format
 
 ([[https://github.com/shamansir/gen-ui][GH:gen-ui]])
 
-#elm, #dhall, #gui, #functional-programming, #computational-arts
+/Tags:/ #elm, #dhall, #gui, #functional-programming, #computational-arts
 
 
-*JS Player for Animatron*
+  - *JS Player for Animatron*
 
 
 
@@ -513,10 +559,10 @@ On storing UI components definitions for Generative Art in JSON or D-Hall format
 
 ([[https://github.com/shamansir/animatron-player][GH:animatron-player]])
 
-#javascript, #canvas, #animation
+/Tags:/ #javascript, #canvas, #animation
 
 
-*Web PD: PureData for Web*
+  - *Web PD: PureData for Web*
 
 
 
@@ -526,10 +572,10 @@ On storing UI components definitions for Generative Art in JSON or D-Hall format
 
 ([[https://github.com/shamansir/web-pd][GH:web-pd]])
 
-#javascript, #pure-data, #svg, #audio-generation, #visual-programming
+/Tags:/ #javascript, #pure-data, #svg, #audio-generation, #visual-programming
 
 
-*JetBrains Splash Screen Generator, with RPD*
+  - *JetBrains Splash Screen Generator, with RPD*
 
 
 
@@ -539,10 +585,10 @@ On storing UI components definitions for Generative Art in JSON or D-Hall format
 
 ([[https://github.com/shamansir/jb-rpd-splash][GH:jb-rpd-splash]], [[https://seti.labs.jb.gg/][SETI Generator in Action @ CAI]], [[https://cai.jetbrains.com/][Computational Arts Initiative]])
 
-#javascript, #visual-programming, #computational-arts, #glsl, #shaders
+/Tags:/ #javascript, #visual-programming, #computational-arts, #glsl, #shaders
 
 
-*sametimed*
+  - *sametimed*
 
 The Chat with Friedly-UI based on Google Federation One (a.k.a. Google Wave) protocol
 
@@ -552,10 +598,10 @@ The Chat with Friedly-UI based on Google Federation One (a.k.a. Google Wave) pro
 
 ([[https://github.com/shamansir/sametimed][GH:sametimed]])
 
-#java, #google-wave
+/Tags:/ #java, #google-wave
 
 
-*nijiato*
+  - *nijiato*
 
 Finger-recognition in LISP with OpenCV
 
@@ -565,10 +611,10 @@ Finger-recognition in LISP with OpenCV
 
 ([[https://github.com/shamansir/nijiato][GH:nijiato]])
 
-#lisp, #camera-tracking, #opencv
+/Tags:/ #lisp, #camera-tracking, #opencv
 
 
-*My TouchDesigner VJing sources*
+  - *My TouchDesigner VJing sources*
 
 
 
@@ -578,10 +624,10 @@ Finger-recognition in LISP with OpenCV
 
 ([[https://github.com/shamansir/touchdesigner][GH:touchdesigner]])
 
-#touchdesigner, #visuals
+/Tags:/ #touchdesigner, #visuals
 
 
-*Open Radiant*
+  - *Open Radiant*
 
 One of the first art generators for JetBrains
 
@@ -591,10 +637,10 @@ One of the first art generators for JetBrains
 
 ([[https://github.com/shamansir/open-radiant][GH:open-radiant]], [[https://cai.jetbrains.com/][Computational Arts Initiative]])
 
-#elm, #functional-programming, #computational-arts, #generative-art
+/Tags:/ #elm, #functional-programming, #computational-arts, #generative-art
 
 
-*Open Elmsfeuer*
+  - *Open Elmsfeuer*
 
 Another one of the first art generators for JetBrains
 
@@ -604,10 +650,10 @@ Another one of the first art generators for JetBrains
 
 ([[https://github.com/shamansir/open-elmsfeuer][GH:open-elmsfeuer]], [[https://origami.labs.jb.gg/][Origami Generator in Action @ CAI]])
 
-#elm, #functional-programming, #computational-arts, #generative-art
+/Tags:/ #elm, #functional-programming, #computational-arts, #generative-art
 
 
-*PegJS - FN*
+  - *PegJS - FN*
 
 The concept of functional PEG-driven parsers for JavaScript where every grammar rule is represented with a single pure function
 
@@ -617,10 +663,10 @@ The concept of functional PEG-driven parsers for JavaScript where every grammar 
 
 ([[https://github.com/shamansir/pegjs-fn][GH:pegjs-fn]], [[https://shamansir.github.io/pegjs-fn/][PegJS-Fn Playground]])
 
-#javascript, #functional-programming, #parsing, #grammar
+/Tags:/ #javascript, #functional-programming, #parsing, #grammar
 
 
-*JavaScript Gardern*
+  - *JavaScript Gardern*
 
 
 
@@ -630,10 +676,10 @@ The concept of functional PEG-driven parsers for JavaScript where every grammar 
 
 ([[https://github.com/shamansir/javascript-garden][GH:javascript-garden]])
 
-#javascript, #translation
+/Tags:/ #javascript, #translation
 
 
-*Japanese Language Reference in Russian*
+  - *Japanese Language Reference in Russian*
 
 (PDF, 300+ pages)
 
@@ -643,10 +689,10 @@ The concept of functional PEG-driven parsers for JavaScript where every grammar 
 
 
 
-#japanese, #pdf, #translation
+/Tags:/ #japanese, #pdf, #translation
 
 
-*Python 3.5 (RU)*
+  - *Python 3.5 (RU)*
 
 Translating Python 3.5 Reference @ Wikibooks
 
@@ -656,10 +702,10 @@ Translating Python 3.5 Reference @ Wikibooks
 
 
 
-#python, #translation
+/Tags:/ #python, #translation
 
 
-*PDF version for how-to-livecode Book*
+  - *PDF version for how-to-livecode Book*
 
 Laying out PDF for how-to-livecode book
 
@@ -669,10 +715,10 @@ Laying out PDF for how-to-livecode book
 
 
 
-#pdf, #generative-audio
+/Tags:/ #pdf, #generative-audio
 
 
-*purescript-doc*
+  - *purescript-doc*
 
 
 
@@ -682,10 +728,10 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/purescript-doc][GH:purescript-doc]])
 
-#functional-programming, #purescript, #org-mode, #markdown
+/Tags:/ #functional-programming, #purescript, #org-mode, #markdown
 
 
-*purescript-org*
+  - *purescript-org*
 
 
 
@@ -695,10 +741,10 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/purescript-org][GH:purescript-org]])
 
-#functional-programming, #purescript, #org-mode
+/Tags:/ #functional-programming, #purescript, #org-mode
 
 
-*purescript-grammar*
+  - *purescript-grammar*
 
 
 
@@ -708,10 +754,10 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/purescript-grammar][GH:purescript-grammar]])
 
-#functional-programming, #purescript, #grammar, #parsing
+/Tags:/ #functional-programming, #purescript, #grammar, #parsing, #datalog
 
 
-*purescript-flex-layout*
+  - *purescript-flex-layout*
 
 
 
@@ -721,10 +767,10 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/purescript-flex-layout][GH:purescript-flex-layout]])
 
-#functional-programming, #purescript, #bin-packing, #user-interface
+/Tags:/ #functional-programming, #purescript, #bin-packing, #user-interface
 
 
-*Finite State Machine engine+example for PureScript*
+  - *Finite State Machine engine+example for PureScript*
 
 
 
@@ -734,12 +780,12 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/purescript-fsm][GH:purescript-fsm]])
 
-#functional-programming, #purescript, #user-interface
+/Tags:/ #functional-programming, #purescript, #user-interface
 
 
-*purescript-optics-interactive*
+  - *purescript-optics-interactive*
 
-
+An attempt to demonstrate visually and interactively how Profunctor Optics work in Functional Languages like PureScript (mostly for my own self)
 
 /Status:/ Draft
 
@@ -747,10 +793,10 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/purescript-optics-interactive][GH:purescript-optics-interactive]])
 
-#functional-programming, #purescript
+/Tags:/ #functional-programming, #purescript
 
 
-*purescript-yoga-tree-utils*
+  - *purescript-yoga-tree-utils*
 
 
 
@@ -760,10 +806,10 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/purescript-yoga-tree-utils][GH:purescript-yoga-tree-utils]])
 
-#functional-programming, #purescript, #org-mode
+/Tags:/ #functional-programming, #purescript, #org-mode
 
 
-*purescript-mahjong*
+  - *purescript-mahjong*
 
 
 
@@ -773,10 +819,10 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/purescript-mahjong][GH:purescript-mahjong]])
 
-#functional-programming, #purescript, #mahjong, #game
+/Tags:/ #functional-programming, #purescript, #mahjong, #game
 
 
-*PrimCivile*
+  - *PrimCivile*
 
 
 
@@ -786,10 +832,10 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/primcivile][GH:primcivile]])
 
-#purescript, #functional-programming, #game
+/Tags:/ #purescript, #functional-programming, #game
 
 
-*Elm Symbolic Logic Game*
+  - *Elm Symbolic Logic Game*
 
 
 
@@ -799,10 +845,10 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/elm-symbolic-logic][GH:elm-symbolic-logic]])
 
-#elm, #logic, #lewis-carrol, #game
+/Tags:/ #elm, #logic, #lewis-carrol, #game
 
 
-*Cayley Rust*
+  - *Cayley Rust*
 
 
 
@@ -812,10 +858,10 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/cayley-rust][GH:cayley-rust]])
 
-#rust, #graphs, #database
+/Tags:/ #rust, #graphs, #database
 
 
-*Vimeoid*
+  - *Vimeoid*
 
 
 
@@ -825,10 +871,10 @@ Laying out PDF for how-to-livecode book
 
 ([[https://github.com/shamansir/vimeoid][GH:vimeoid]])
 
-#android, #java, #application
+/Tags:/ #android, #java, #application
 
 
-*NodeJS Binary Parser*
+  - *NodeJS Binary Parser*
 
 
 
@@ -837,7 +883,7 @@ Laying out PDF for how-to-livecode book
 ([[https://github.com/shamansir/nodejs-binary-parser][GH:nodejs-binary-parser]])
 
 
-*Elm Goose Driven Tutorial*
+  - *Elm Goose Driven Tutorial*
 
 
 
@@ -846,7 +892,7 @@ Laying out PDF for how-to-livecode book
 ([[https://github.com/shamansir/elm-goose-driven-tutorial][GH:elm-goose-driven-tutorial]])
 
 
-*Showdown Blog*
+  - *Showdown Blog*
 
 Blog engine driven by JavaScript + XSLT
 
@@ -855,7 +901,7 @@ Blog engine driven by JavaScript + XSLT
 ([[https://github.com/shamansir/showdown-blog][GH:showdown-blog]])
 
 
-*Мюнхен-Флю*
+  - *Мюнхен-Флю*
 
 
 
@@ -864,7 +910,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-*Лё Баналь*
+  - *Лё Баналь*
 
 
 
@@ -873,7 +919,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-*Translation for Duke Nukem 3D Build Engine Tutorial*
+  - *Translation for Duke Nukem 3D Build Engine Tutorial*
 
 
 
@@ -882,7 +928,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-*The Neverhood Walhthrough*
+  - *The Neverhood Walhthrough*
 
 
 
@@ -891,7 +937,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-*Transit Maps*
+  - *Transit Maps*
 
 
 
@@ -900,7 +946,7 @@ Blog engine driven by JavaScript + XSLT
 ([[https://github.com/shamansir/transit-maps][GH:transit-maps]])
 
 
-*LEAN Train*
+  - *LEAN Train*
 
 
 
@@ -909,7 +955,7 @@ Blog engine driven by JavaScript + XSLT
 ([[https://github.com/shamansir/lean-train][GH:lean-train]])
 
 
-*Elm Fluxus*
+  - *Elm Fluxus*
 
 
 
@@ -918,7 +964,7 @@ Blog engine driven by JavaScript + XSLT
 ([[https://github.com/shamansir/elm-fluxus][GH:elm-fluxus]])
 
 
-*Elm Graph Render*
+  - *Elm Graph Render*
 
 
 
@@ -927,7 +973,7 @@ Blog engine driven by JavaScript + XSLT
 ([[https://github.com/shamansir/elm-graph-render][GH:elm-graph-render]])
 
 
-*elm-bin-pack*
+  - *elm-bin-pack*
 
 
 
@@ -936,7 +982,7 @@ Blog engine driven by JavaScript + XSLT
 ([[https://github.com/shamansir/elm-bin-pack][GH:elm-bin-pack]])
 
 
-*Forster*
+  - *Forster*
 
 
 
@@ -945,21 +991,21 @@ Blog engine driven by JavaScript + XSLT
 ([[https://github.com/shamansir/forster][GH:forster]])
 
 
-*Dat Org Editor*
+  - *Dat Org Editor*
 
 
 
 ([[https://github.com/shamansir/dat-org-editor][GH:dat-org-editor]])
 
 
-*Elm-Graph-Render*
+  - *Elm-Graph-Render*
 
 
 
 ([[https://github.com/shamansir/elm-graph-render][GH:elm-graph-render]])
 
 
-*Exercism*
+  - *Exercism*
 
 
 
@@ -968,35 +1014,35 @@ Blog engine driven by JavaScript + XSLT
 ([[https://github.com/shamansir/exercism][GH:exercism]])
 
 
-*Elm-Friendly-Parser*
+  - *Elm-Friendly-Parser*
 
 
 
 ([[https://github.com/shamansir/elm-friendly-parser][GH:elm-friendly-parser]])
 
 
-*Track-Me-I-Am-Famous*
+  - *Track-Me-I-Am-Famous*
 
 
 
 ([[https://github.com/shamansir/track-me-i-am-famous][GH:track-me-i-am-famous]])
 
 
-*Elm-Ohm-Grammar*
+  - *Elm-Ohm-Grammar*
 
 
 
 ([[https://github.com/shamansir/elm-ohm-grammar][GH:elm-ohm-grammar]])
 
 
-*RPD-P5-Particle-System*
+  - *RPD-P5-Particle-System*
 
 
 
 ([[https://github.com/shamansir/rpd-p5-particle-system][GH:rpd-p5-particle-system]])
 
 
-*RPD-PureData*
+  - *RPD-PureData*
 
 
 
@@ -1005,42 +1051,42 @@ Blog engine driven by JavaScript + XSLT
 ([[https://github.com/shamansir/rpd-puredata][GH:rpd-puredata]])
 
 
-*Showdown-Blog*
+  - *Showdown-Blog*
 
 
 
 ([[https://github.com/shamansir/showdown-blog][GH:showdown-blog]])
 
 
-*Mdown-Parse-PegJS*
+  - *Mdown-Parse-PegJS*
 
 
 
 ([[https://github.com/shamansir/mdown-parse-pegjs][GH:mdown-parse-pegjs]])
 
 
-*XTD (forall-TD)*
+  - *XTD (forall-TD)*
 
 
 
 ([[https://github.com/shamansir/xtd][GH:xtd]])
 
 
-*GWT-mvp4-layouting-demo*
+  - *GWT-mvp4-layouting-demo*
 
 
 
 ([[https://github.com/shamansir/gwt-mvp4-layouting-demo][GH:gwt-mvp4-layouting-demo]])
 
 
-*Fluxus-music-demo-addconf*
+  - *Fluxus-music-demo-addconf*
 
 
 
 ([[https://github.com/shamansir/fluxus-music-demo-addconf][GH:fluxus-music-demo-addconf]])
 
 
-*Cometd-Demo*
+  - *Cometd-Demo*
 
 
 
@@ -1049,7 +1095,7 @@ Blog engine driven by JavaScript + XSLT
 ([[https://github.com/shamansir/cometd-demo][GH:cometd-demo]])
 
 
-*Corsika-Visualization*
+  - *Corsika-Visualization*
 
 
 
