--- a/Org/Music (ORG).org
+++ b/Org/Music (ORG).org
@@ -291,8 +291,7 @@
   -  *Про пику* 01:59 /2023/ ([[https://soundcloud.com/shamansir/pro-piku?in=shamansir/sets/geeky-songs][SC]])
   -  *Korona* 01:27 /2023/ ([[https://soundcloud.com/shamansir/korona?in=shamansir/sets/geeky-songs][SC]])
 
-*** Separate Tracks
-  -  *Jerome* 02:39 /2023/ ([[https://soundcloud.com/shamansir/jerome][SC]]) /as/ Elektrokiłka
+*** Separate Tracks  -  *Jerome* 02:39 /2023/ ([[https://soundcloud.com/shamansir/jerome][SC]]) /as/ Elektrokiłka
   -  *Slimeberry Fields (Revisited)* 12:03 /2023/ ([[https://soundcloud.com/shamansir/slimeberry-fields-revisited][SC]]) /as/ Elektrokiłka
   -  *The Wonderjam (w/ Kostya Starostin)* 01:41:33 /2023/ ([[https://soundcloud.com/shamansir/the-wonderjam-w-kostya-starostin][SC]]) /as/ Elektrokiłka
   -  *Инжир* 01:00 /2024/ ([[https://soundcloud.com/shamansir/inzhir-v23][SC]]) /as/ Elektrokiłka
